--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -30,7 +30,7 @@
         <span aria-hidden="true">X</span>
       </button>
       <div class="subpage__navmenu_title">Chapters Menu</div>
-        <ol class="subpage__navmenu_ul menu vertical">
+        <ol class="subpage__navmenu_ol menu vertical">
           {{> menu}}
         </ol>
 
