--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -2,26 +2,29 @@
             <a href="{{root}}/index.html">Title Page</a>
           </li>
           <li>
-            <a href="{{root}}/introduction_sarah_k_russell.html">Introduction to the Website Developer &mdash;<br /><span class="home__menu_list__subtitle">Sarah K. Russell</span><span class="home__menu_list__page">p. 2</span></a>
+            <a href="{{root}}/introduction_sarah_k_russell.html">Introduction to the Website Developer;<br /><span class="home__menu_list__subtitle">Sarah K. Russell</span><span class="home__menu_list__page">p. 2</span></a>
           </li>
           <li>
             <a href="{{root}}/ps_websites_built_for_financial_institutions.html">ProfitStars<br /><span class="home__menu_list__subtitle">Building Websites for Banking &amp; Financial Institutions</span><span class="home__menu_list__page">p. 4</span></a>
           </li>
           <li>
-            <a href="{{root}}/bert_riggall_website.html">Bert Riggall's Greater Waterton, A Conservation Legacy<br /><span class="home__menu_list__subtitle">Book</span><span class="home__menu_list__page">p. 6</span></a>
+            <a href="{{root}}/foothill_flyers_disc_golf_club.html">Foothill Flyers<br /><span class="home__menu_list__subtitle">Colorado Disc Golf Club</span><span class="home__menu_list__page">p. 6</span></a>
           </li>
           <li>
-             <a href="{{root}}/linda_anderson_stewart_website.html">Linda Anderson Stewart, B.F.A<br /><span class="home__menu_list__subtitle">Fine Art Painter</span><span class="home__menu_list__page">p. 8</span></a>
+            <a href="{{root}}/bert_riggall_website.html">Bert Riggall's Greater Waterton, A Conservation Legacy<br /><span class="home__menu_list__subtitle">Book</span><span class="home__menu_list__page">p. 8</span></a>
           </li>
           <li>
-            <a href="{{root}}/peter_raabe_website.html">Peter B. Raabe, PH.D.<br /><span class="home__menu_list__subtitle">A Philosophical Counselling Website</span><span class="home__menu_list__page">p. 10</span></a>
+             <a href="{{root}}/linda_anderson_stewart_website.html">Linda Anderson Stewart, B.F.A<br /><span class="home__menu_list__subtitle">Fine Art Painter</span><span class="home__menu_list__page">p. 10</span></a>
           </li>
           <li>
-             <a href="{{root}}/gust_gallery_website.html">Gust Gallery, Fine Arts<br /><span class="home__menu_list__subtitle">Gallery in Waterton Lakes National Park</span><span class="home__menu_list__page">p. 12</span></a>
+            <a href="{{root}}/peter_raabe_website.html">Peter B. Raabe, PH.D.<br /><span class="home__menu_list__subtitle">A Philosophical Counselling Website</span><span class="home__menu_list__page">p. 12</span></a>
           </li>
           <li>
-             <a href="{{root}}/prologue_the_first_site.html">Prologue<br /><span class="home__menu_list__subtitle">The First Site - where it all started</span><span class="home__menu_list__page">p. 14</span></a>
+             <a href="{{root}}/gust_gallery_website.html">Gust Gallery, Fine Arts<br /><span class="home__menu_list__subtitle">Gallery in Waterton Lakes National Park</span><span class="home__menu_list__page">p. 14</span></a>
           </li>
           <li>
-             <a href="{{root}}/sitemap.html">Table of Contents<br /><span class="home__menu_list__page">p. 16</span></a>
+             <a href="{{root}}/prologue_the_first_site.html">Prologue<br /><span class="home__menu_list__subtitle">The First Site - where it all started</span><span class="home__menu_list__page">p. 16</span></a>
+          </li>
+          <li>
+             <a href="{{root}}/sitemap.html">Table of Contents<br /><span class="home__menu_list__page">p. 18</span></a>
           </li>
