--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -13,6 +13,19 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}assets/css/app.css" />
 
+    <!-- favicon -->
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{root}}/assets/img/fav/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{root}}/assets/img/fav/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{root}}/assets/img/fav/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{root}}/assets/img/fav/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{root}}/assets/img/fav/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{root}}/assets/img/fav/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="{{root}}/assets/img/fav/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{{root}}/assets/img/fav/favicon-16x16.png" sizes="16x16" />
+    <meta name="application-name" content="SKR Design LLC"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="{{root}}/assets/img/fav/mstile-144x144.png" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-10951458-3"></script>
     <script>
