ADA compliance added and removed foundation extra css and js

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -86,3 +86,26 @@ body {
   color: $black;
   background: $white;
 }
+
+#skiptocontent a {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+  background-color: #B22222;
+  color: $white;
+  z-index: 20;
+  &:focus {
+    position:relative;
+    width:100vw;
+    left:0;
+    height:auto;
+    padding: .5rem 1rem;
+    display: block;
+  }
+  &:hover, &:active {
+    color: #D6D6D6;
+  }
+}
