--- a/src/assets/scss/global/_book_app.scss
+++ b/src/assets/scss/global/_book_app.scss
@@ -185,8 +185,8 @@
 
     &_ol.menu {
       padding: 0;
-      list-style: number;
       margin: 1rem 1.5rem 2rem 2.5rem;
+      list-style: decimal;
       li {
           padding-left: 0;
         a {
