--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Title of the site and list of site pages">
     <meta name="keywords" content="Sarah Russell Website Developer, Frontend Website Developer, SKR Design LLC, Website Builder">
     <title>SKR Design LLC - Sarah K. Russell - Frontend Website Developer</title>
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,700|Libre+Baskerville" rel="stylesheet">
@@ -36,16 +36,19 @@
     <!-- END  Global site tag - Google Analytics -->
   </head>
   <body>
+    <div id="skiptocontent"><a href="#main_content">Skip navigation to main content</a></div>
 
     <div class="subpage__navmenu off-canvas position-right" id="offCanvas" data-off-canvas data-transition="overlay" data-reveal-on="large">
 
       <button class="close-button" aria-label="Close menu" type="button" data-close>
-        <span aria-hidden="true">X</span>
+        <span aria-hidden="true"><span class="screen_reader_accessible">Close Menu</span>X</span>
       </button>
       <div class="subpage__navmenu_title">Chapters Menu</div>
-        <ol class="subpage__navmenu_ol menu vertical">
-          {{> menu}}
-        </ol>
+        <nav aria-label="Main Navigation" role="navigation">
+          <ol class="subpage__navmenu_ol menu vertical">
+            {{> menu}}
+          </ol>
+        </nav>
 
     </div>
 
