--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -48,6 +48,11 @@
       <div class="subpage__navmenu_title"><i class="fa fa-bookmark" id="bookmark_icon" aria-hidden="true"><span class="screen_reader_accessible">Bookmark Icon</span></i> Chapters Index</div>
         <nav aria-label="Main Navigation" role="navigation">
           <ol class="subpage__navmenu_ol menu vertical">
+            <ul class="menu_list__first_item">
+              <li>
+                <a href="{{root}}/index.html">Title Page</a>
+              </li>
+            </ul>
             {{> menu}}
           </ol>
         </nav>
