Added BMR page to site
Added BMR page to site and update corresponding page and chapter numbers.

--- a/src/assets/scss/global/_book_app.scss
+++ b/src/assets/scss/global/_book_app.scss
@@ -539,6 +539,11 @@ ul#sitemap_menu {
   	}
 }
 
+.subpage__right_contents img {
+  background: #EDEDED;
+  padding: .25rem;
+}
+
 #bookmark_icon {
   color: $black;
   font-size: 1.7rem;
