--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -37,7 +37,7 @@
     </script>
     <!-- END  Global site tag - Google Analytics -->
   </head>
-  <body>
+  <body id="body" class="light_mode">
     <div id="skiptocontent"><a href="#main_content">Skip navigation to main content</a></div>
 
     <div class="subpage__navmenu off-canvas position-right" id="offCanvas" data-off-canvas data-transition="overlay" data-reveal-on="large">
