Updates to text and changed Website Developer to the more standard Web Developer in text, page descriptions and seo.

--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{description}}.">
-    <meta name="keywords" content="Sarah Russell Website Developer, Frontend Website Developer, SKR Design LLC, Website Builder">
+    <meta name="keywords" content="Sarah Russell Web Developer, Sarah Russell Front End Developer, SKR Design LLC">
     <title>{{title}} - SKR Design LLC, Sarah K. Russell</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,700" rel="stylesheet">
