--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -1,7 +1,7 @@
 
 
           <li>
-            <a href="{{root}}/introduction_sarah_k_russell.html">Introduction to the Website Developer;<br /><span class="home__menu_list__subtitle">Sarah K. Russell</span><span class="home__menu_list__page">p. 2</span></a>
+            <a href="{{root}}/introduction_sarah_k_russell.html">Introduction to the Web Developer;<br /><span class="home__menu_list__subtitle">Sarah K. Russell</span><span class="home__menu_list__page">p. 2</span></a>
           </li>
           <li>
             <a href="{{root}}/ps_websites_built_for_financial_institutions.html">ProfitStars<br /><span class="home__menu_list__subtitle">Building Websites for Banking &amp; Financial Institutions</span><span class="home__menu_list__page">p. 4</span></a>
@@ -16,7 +16,7 @@
             <a href="{{root}}/black_market_research_website.html">Black Market Research<br /><span class="home__menu_list__subtitle">Nashville Indie Rock Band</span><span class="home__menu_list__page">p. 10</span></a>
           </li>
           <li>
-             <a href="{{root}}/prologue_the_first_site.html">Prologue<br /><span class="home__menu_list__subtitle">The First Site - where it all started</span><span class="home__menu_list__page">p. 12</span></a>
+             <a href="{{root}}/prologue_the_first_site.html">Prologue<br /><span class="home__menu_list__subtitle">The First Site &mdash; where it all started</span><span class="home__menu_list__page">p. 12</span></a>
           </li>
           <li>
              <a href="{{root}}/sitemap.html">Table of Contents<br /><span class="home__menu_list__page">p. 14</span></a>
