Changing page and chapter numbers to accommodate new page.

--- a/src/assets/scss/global/_book_app.scss
+++ b/src/assets/scss/global/_book_app.scss
@@ -553,3 +553,9 @@ ul#sitemap_menu {
   font-size: 1.7rem;
   transform: rotate(180deg);
 }
+
+.not_found {
+  font-size: 1.625rem;
+  font-weight: 700;
+  line-height: 2.6;
+}
