--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -7,17 +7,20 @@
             <a href="{{root}}/ps_websites_built_for_financial_institutions.html">ProfitStars<br /><span class="home__menu_list__subtitle">Building Websites for Banking &amp; Financial Institutions</span><span class="home__menu_list__page">p. 4</span></a>
           </li>
           <li>
-            <a href="{{root}}/foothill_flyers_disc_golf_club.html">Foothill Flyers<br /><span class="home__menu_list__subtitle">Colorado Disc Golf Club</span><span class="home__menu_list__page">p. 6</span></a>
+            <a href="{{root}}/judith_nickol_website.html">Judith Nickol<br /><span class="home__menu_list__subtitle">Canadian Artist</span><span class="home__menu_list__page">p. 6</span></a>
           </li>
           <li>
-            <a href="{{root}}/bert_riggall_website.html">Bert Riggall's Greater Waterton, A Conservation Legacy<br /><span class="home__menu_list__subtitle">Book</span><span class="home__menu_list__page">p. 8</span></a>
+            <a href="{{root}}/foothill_flyers_disc_golf_club.html">Foothill Flyers<br /><span class="home__menu_list__subtitle">Colorado Disc Golf Club</span><span class="home__menu_list__page">p. 8</span></a>
           </li>
           <li>
-            <a href="{{root}}/black_market_research_website.html">Black Market Research<br /><span class="home__menu_list__subtitle">Nashville Indie Rock Band</span><span class="home__menu_list__page">p. 10</span></a>
+            <a href="{{root}}/bert_riggall_website.html">Bert Riggall's Greater Waterton, A Conservation Legacy<br /><span class="home__menu_list__subtitle">Book</span><span class="home__menu_list__page">p. 10</span></a>
           </li>
           <li>
-             <a href="{{root}}/prologue_the_first_site.html">Prologue<br /><span class="home__menu_list__subtitle">The First Site &mdash; where it all started</span><span class="home__menu_list__page">p. 12</span></a>
+            <a href="{{root}}/black_market_research_website.html">Black Market Research<br /><span class="home__menu_list__subtitle">Nashville Indie Rock Band</span><span class="home__menu_list__page">p. 12</span></a>
           </li>
           <li>
-             <a href="{{root}}/sitemap.html">Table of Contents<br /><span class="home__menu_list__page">p. 14</span></a>
+             <a href="{{root}}/prologue_the_first_site.html">Prologue<br /><span class="home__menu_list__subtitle">The First Site &mdash; where it all started</span><span class="home__menu_list__page">p. 14</span></a>
+          </li>
+          <li>
+             <a href="{{root}}/sitemap.html">Table of Contents<br /><span class="home__menu_list__page">p. 16</span></a>
           </li>
