--- a/src/assets/scss/global/_typography.scss
+++ b/src/assets/scss/global/_typography.scss
@@ -4,8 +4,8 @@
 $light-grey: #D6D6D6;
 $light-white:#F2F2F2;
 $text-black: #1A1A1A;
-$maroon: #800000;
-$brown: #843A06;
+$maroon: #8c0202;
+$brown: #9E5700;
 
 $global-font-size: 100%;
 $global-width: rem-calc(1200);
