--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Title of the site and list of site pages">
     <meta name="keywords" content="Sarah Russell Website Developer, Frontend Website Developer, SKR Design LLC, Website Builder">
-    <title>SKR Design LLC - Sarah K. Russell - Frontend Website Developer</title>
+    <title>SKR Design LLC - Sarah K. Russell - Web Developer</title>
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,700|Libre+Baskerville" rel="stylesheet">
     <link rel="stylesheet" href="{{root}}assets/css/app.css" />
 
