--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{description}}.">
     <meta name="keywords" content="Sarah Russell Web Developer, Sarah Russell Front End Developer, SKR Design LLC">
-    <title>{{title}} - SKR Design LLC, Sarah K. Russell</title>
+    <title>{{title}} - SKR Design LLC, Sarah K. Russell - Web Developer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
@@ -66,11 +66,12 @@
                       </header>
                         {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
 
-                        {{> body}}
+
+                          {{> body}}
+
 
                 </div>
                 <!-- end subpage__grid_container -->
-
           </div>
           <!-- end subpage -->
         </div>
