--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -45,7 +45,7 @@
       <button class="close-button" aria-label="Close menu" type="button" data-close>
         <span aria-hidden="true"><span class="screen_reader_accessible">Close Menu</span>X</span>
       </button>
-      <div class="subpage__navmenu_title"><i class="fa fa-bookmark" id="bookmark_icon" aria-hidden="true"><span class="screen_reader_accessible">Bookmark Icon</span></i> <a href="{{root}}/index.html">Chapters Index</a></div>
+      <div class="subpage__navmenu_title"><i class="fa fa-bookmark" id="bookmark_icon" aria-hidden="true"><span class="screen_reader_accessible">Bookmark Icon</span></i> <a href="{{root}}/index.html">Chapters Menu</a></div>
         <nav aria-label="Main Navigation" role="navigation">
           <ol class="subpage__navmenu_ol menu vertical">
             {{> menu}}
@@ -62,7 +62,7 @@
                 <div class="subpage__grid_container">
 
                       <header class="subpage__menu">
-                            <a type="button" data-toggle="offCanvas">Chapters Index</a>
+                            <a type="button" data-toggle="offCanvas">Chapters Menu</a>
                       </header>
                         {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
 
